--- a/src/Revit.ScriptCS.ScriptRunner/Revit.ScriptCS.ScriptRunner.csproj
+++ b/src/Revit.ScriptCS.ScriptRunner/Revit.ScriptCS.ScriptRunner.csproj
@@ -38,6 +38,14 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="accoremgd, Version=24.1.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>C:\Program Files\Autodesk\AutoCAD 2022\accoremgd.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Acdbmgd, Version=24.1.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>C:\Program Files\Autodesk\AutoCAD 2022\acdbmgd.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Microsoft.CodeAnalysis.CSharp.Features">
       <HintPath>..\..\lib\Microsoft.CodeAnalysis.CSharp.Features.dll</HintPath>
     </Reference>
@@ -62,14 +70,6 @@
     <Reference Include="RoslynPad.Roslyn.Windows">
       <HintPath>..\..\lib\RoslynPad.Roslyn.Windows.dll</HintPath>
     </Reference>
-    <Reference Include="RevitAPI">
-      <HintPath>$(ProgramW6432)\Autodesk\Revit 2019\RevitAPI.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="RevitAPIUI">
-      <HintPath>$(ProgramW6432)\Autodesk\Revit 2019\RevitAPIUI.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -92,6 +92,9 @@
     <Compile Include="CodeActionsConverter.cs" />
     <Compile Include="DocumentTemplateSelector.cs" />
     <Compile Include="DocumentViewModel.cs" />
+    <Compile Include="FrmSharpShell.xaml.cs">
+      <DependentUpon>FrmSharpShell.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -131,6 +134,10 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="FrmSharpShell.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Resources\Icons.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
